restructure, make the mainpage look fancy

--- a/apportionment.html
+++ b/apportionment.html
@@ -1,13 +1,15 @@
 <html>
 	<head>
-		<script src="templates.js"></script>
-		<script src="apportionment.js"></script>
-		<link rel="stylesheet" type="text/css" href="apportionment.css"></style>
+		<script src="apportionment/templates.js"></script>
+		<script src="apportionment/apportionment.js"></script>
+		<link rel="stylesheet" type="text/css" href="apportionment/style.css">
+		<link rel="stylesheet" type="text/css" href="generic.css">
+
 		<title>Apportionment</title>
 	</head>
 	<body>
 		<h1>
-			<img src="koch.png" height=50px width=auto style='vertical-align: middle'></img>
+			<a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a>
 			<span>Apportionment Simulator</span>
 		</h1>
 		<div class=divbutton>Upload Custom Template</div>
