--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-test
+<html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="generic.css">
+
+		<title>Apportionment</title>
+	</head>
+	<body>
+		<h1>
+			<a href="sekrit.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a>
+			<span>I am Root</span>
+		</h1>
+
+		<h2>Hi, I'm Bazinga_9000. Welcome to my website. I'll add things here every so often.
+		To return to this page, click the Koch Snowflake in the upper left.</h2>
+
+		<a href="apportionment.html"><div class="divbutton">Apportionment Simulator</div></a>
+
+	</body>
+</html>
