--- a/apportionment.html
+++ b/apportionment.html
@@ -12,8 +12,8 @@
 			<a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a>
 			<span>Apportionment Simulator</span>
 		</h1>
-		<div class=divbutton>Upload Custom Template</div>
-		<div class=divbutton>Export to Template</div>
+		<div class=divbutton onclick=uploadCustomTemplate();>Upload Custom Template</div>
+		<div class=divbutton onclick=alert(exportTemplate());>Export to Template</div>
 		<div class=divbutton onclick=clearStates();>Clear</div>
 		<br>
 		Number of Seats: <input type=number id="seat_number"></input><br>
@@ -26,6 +26,6 @@
 		
 		<h2>Load Data from Templates</h2>
 		<div class=divbutton onclick=applyTemplate(us2010);>2010 U.S. House of Representatives</div>
-		<div class=divbutton>World Populations</div><br>
+		<div class=divbutton onclick=applyTemplate(world);>World Populations</div><br>
 	</body>
 </html>
