updated mainpage and added sortable table to apportionment

--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
 
 		<a href="apportionment.html"><div class="divbutton">Apportionment Simulator</div></a>
 
+
+		<p>
+			Contact: <br>
+			Discord - Bazinga_9000#6963<br>
+			Twitter - @Bazinga_9000<br>
+			(that's pretty much it.)<br>
+		</p>
 	</body>
 </html>
