--- a/randomore.html
+++ b/randomore.html
@@ -21,5 +21,10 @@
 			<option value='japanese_on'> Sino-Japanese (Romaji)</option>
 			<option value='random'>Random</option>
 		</select>
+		<h1 id=name></h1>
+		<canvas id=blockcanvas width=128 height=128></canvas>
+		<canvas id=itemcanvas width=128 height=128></canvas>
+		<canvas id=oreblockcanvas width=128 height=128></canvas>
+
 	</body>
 </html>
