mining speed and vietnamese

--- a/randomore.html
+++ b/randomore.html
@@ -18,7 +18,8 @@
 			<option value='english'>English (Simple)</option>
 			<option value='english_complex'>English (Complex)</option>
 			<option value='chinese'>Chinese (Pinyin)</option>
-			<option value='japanese_on'> Sino-Japanese (Romaji)</option>
+			<option value='japanese_on'>Sino-Japanese (Romaji)</option>
+			<option value='viet'>Vietnamese</option>
 			<option value='random'>Random</option>
 		</select>
 		<h1 id=name></h1>
