fixed css on the apportionment table

--- a/apportionment.html
+++ b/apportionment.html
@@ -20,7 +20,8 @@
 		<input type="checkbox" checked=true id="start_with_one_each">Start with 1 seat given to each</input><br>
 		<div class=divbutton onclick=apportion()>Apportion</div>
 
-		<div id="state_inputs">
+		<div id='meta' style='display: flex;'>
+			<div id="state_inputs" style='margin-right: 30px'></div>
 		</div>
 		<div class=divbutton onclick=newState();>Add New District</div><br>
 		
