updated basically every page

--- a/apportionment.html
+++ b/apportionment.html
@@ -17,7 +17,7 @@
 		<div class=divbutton onclick=clearStates();>Clear</div>
 		<br>
 		Number of Seats: <input type=number id="seat_number"></input><br>
-		<input type="checkbox" checked=true id="start_with_one_each">Start with 1 seat given to each</input><br>
+		<input type="number" id="starting_seats" value=1>Number of Seats each District starts with</input><br>
 		<div class=divbutton onclick=apportion()>Apportion</div>
 
 		<div id='meta' style='display: flex;'>
