--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<h3>Interactives</h3><br>
 		<a href="apportionment.html"><div class="divbutton">Apportionment Simulator</div></a>
 		<a href="randomore.html"><div class="divbutton">Random Ore Generator</div></a>
+		<a href="textmods.html"><div class="divbutton">Text Modification</div></a>
+
 
 
 		<p>
