--- a/sekrit.html
+++ b/sekrit.html
@@ -2,7 +2,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="generic.css">
 
-		<title>Apportionment</title>
+		<title>∃</title>
 	</head>
 	<body>
 		<h1>
