--- a/textmods.html
+++ b/textmods.html
@@ -45,6 +45,6 @@ function stand() {
 		<textarea id="textbox" rows="8" cols="100"></textarea>
 		<br>
 		
-		<button onclick=stand()>『Ｓｔａｎｄ』</button>
+		<div class="divbutton" onclick=stand()>『Ｓｔａｎｄ』</button>
 	</body>
 </html>
