updates across site, added hsr

--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="generic.css">
 
-		<title>Apportionment</title>
+		<title>The Start of It All</title>
 	</head>
 	<body>
 		<h1>
-			<a href="sekrit.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a>
-			<span>I am Root</span>
+			<center><a href="sekrit.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><span>I am Root</span></center>
 		</h1>
 
 		<h2>Hi, I'm Bazinga_9000. Welcome to my website. I'll add things here every so often.
-		To return to this page, click the Koch Snowflake in the upper left.</h2>
+		To return to this page, click the Koch Snowflake in the upper center.</h2>
 
-		<h3>Interactives</h3><br>
+		<h3>Interactives</h3>
 		<a href="apportionment.html"><div class="divbutton">Apportionment Simulator</div></a>
 		<a href="randomore.html"><div class="divbutton">Random Ore Generator</div></a>
 		<a href="textmods.html"><div class="divbutton">Text Modification</div></a>
 
-
+		<h3>Non-Interactives</h3>
+		<a href="hsr.html"><div class="divbutton">The Horse Shoe Run</div></a>
 
 		<p>
 			Contact: <br>
