--- a/randomore.html
+++ b/randomore.html
@@ -7,8 +7,8 @@
 	</head>
 	<body>
 		<h1>
-			<a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a>
-			<span>Random Ore Generator</span>
+			<center><a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><span>Random Ore Generator</span></center>
 		</h1>
 
 		<div class=divbutton onclick=randomizeSeed();>Randomize Seed</div>
