--- a/sekrit.html
+++ b/sekrit.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<h1>
-			<a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a>
-			<span>Oh, you think you're so clever, don't you?</span>
+			<center><a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><span>Oh, you think you're so clever, don't you?</span></center>
 		</h1>
 
 		<h2>That's all you get. Now go away.</h2>
