--- a/textmods.html
+++ b/textmods.html
@@ -38,8 +38,8 @@ function stand() {
 	</script>
 	<body>
 		<h1>
-			<a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a>
-			<span>Text Modifications</span>
+			<center><a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><span>Text Modifications</span></center>
 		</h1>
 
 		<textarea id="textbox" rows="8" cols="100"></textarea>
