--- a/apportionment.html
+++ b/apportionment.html
@@ -9,8 +9,8 @@
 	</head>
 	<body>
 		<h1>
-			<a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a>
-			<span>Apportionment Simulator</span>
+			<center><a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><span>Apportionment Simulator</span></center>
 		</h1>
 		<div class=divbutton onclick=uploadCustomTemplate();>Upload Custom Template</div>
 		<div class=divbutton onclick=alert(exportTemplate());>Export to Template</div>
