--- a/hsr.html
+++ b/hsr.html
@@ -17,7 +17,7 @@
 		<center><div style="display: flex; justify-content: center">
 			<div style="padding: 20px">
 			<h3>Section α - Across the Land</h3>
-			<a href="hsr/p1.html" class=hyperlink>Prelude - On the Nature of Speed</a><br>
+			<a href="hsr/p1.html" class="hyperlink">Prelude - On the Nature of Speed</a><br>
 			<!--<a href="hsr/1.html">-->I - The Horse Shoe Run<!--</a>--><br>
 			<!--<a href="hsr/2.html">-->II - They're Off!<!--</a>--><br>
 			<!--<a href="hsr/i1.html">-->Interlude - On the Nature of Power<!--</a>--><br>
