--- a/hsr/p1.html
+++ b/hsr/p1.html
@@ -14,7 +14,7 @@
 
 		<p>“Seventeen, we are now ready to hear your proposal."</p>
 
-		<p>They gulped. Seventeen knew that his proposal was a bit odd, to say the least, and he feared it might earn him the ridicule of the entire Council. Considering that the last time a gaffe of this magnitude happened, Thirty Eight was dubbed “Bluehead” for about four thousand years, this was entirely unwanted. </p>
+		<p>They gulped. Seventeen knew that their proposal was a bit odd, to say the least, and they feared it might earn them the ridicule of the entire Council. Considering that the last time a gaffe of this magnitude happened, Thirty Eight was dubbed “Bluehead” for about four thousand years, this was entirely unwanted. </p>
 
 		<p>“Thank you, One. I’m not going to waste time going over the why here, we all already know that. My admittedly…” They stuttered for a bit. “Esoteric proposal might be a good way to find a solution. Or many, in fact. I propose that we hold a large race—”</p>
 
@@ -32,15 +32,15 @@
 
 		<p>“Not to inflate your ego, Seventeen, but this is brilliant. I have just one question though. How are we to ensure that those necessary are actually going to participate? We’d need to scour many worlds and draw them out.”</p>
 
-		<p>A smile grew on Seventeen’s face as he revealed the answer. “That’s the best part, Two! We kill two birds with one stone and have a set of powerful artifacts as the prize. This means that the winners are proven competent! In addition, we can even use the lower placers and give them some consolation prizes.”</p>
+		<p>A smile grew on Seventeen’s face as they revealed the answer. “That’s the best part, Two! We kill two birds with one stone and have a set of powerful artifacts as the prize. This means that the winners are proven competent! In addition, we can even use the lower placers and give them some consolation prizes.”</p>
 
-		<p>“Elegant”, Two declared. At this Seventeen’s attempts at keeping his ego in check collapsed and they broke out into a dumb grin. “One, have you anything to say?”</p>
+		<p>“Elegant”, Two declared. At this Seventeen’s attempts at keeping their ego in check collapsed and they broke out into a dumb grin. “One, have you anything to say?”</p>
 
 		<p>“I do not.” they announced. “After a quick read of the room this is merely a formality, but now we must cast our votes on this race proposal.” The sounds of buttons pressing and displays beeping filled the room. Even though they didn’t have to vote like this, they enjoyed this more traditional method. After the vote tally was complete One spoke once more. </p>
 
 		<p>“By a vote of ninety to one, the proposal passes. Before we begin planning, you never actually gave this proposal a name, Seventeen. What do you want to call it?”</p>
 
-		<p>Seventeen never actually thought about this while drafting the proposal, so this question put them on the spot a bit. After looking through his document for inspiration he realized that the route of the first leg looked like something. Inspiration struck, and Seventeen spoke:</p>
+		<p>Seventeen never actually thought about this while drafting the proposal, so this question put them on the spot a bit. After looking through their document for inspiration they realized that the route of the first leg looked like something. Inspiration struck, and Seventeen spoke:</p>
 
 		<p>“The Horse Shoe Run.”</p>
 
