fix the ? puzzle

--- a/hsr.html
+++ b/hsr.html
@@ -33,7 +33,7 @@
 			<!--<a href="hsr/i2.html">-->Interlude - ?? ??? ?????? ?? ?????????????<!--</a>--><br>
 			<!--<a href="hsr/8.html">-->VIII - ??? ???? ?? ??? ???????<!--</a>--><br>
 			<!--<a href="hsr/9.html">-->IX - ??? ????? ?? ??? ??????<!--</a>--><br>
-			<!--<a href="hsr/10.html">-->X - ????????? ????<!--</a>--><br>
+			<!--<a href="hsr/10.html">-->X - ???????? ????<!--</a>--><br>
 			</div>
 			<div style="padding: 20px">
 			<h3>Section γ - ???????? ??? ????????</h3>
@@ -51,7 +51,7 @@
 			<!--<a href="hsr/17.html">-->XVII - ?? ??? ?????? ?? ????????<!--</a>--><br>
 			<!--<a href="hsr/18.html">-->XVIII - ?? ??? ?????? ?? ?????<!--</a>--><br>
 			<!--<a href="hsr/19.html">-->XIX - ?? ??? ?????? ?? ?????????<!--</a>--><br>
-			<!--<a href="hsr/20.html">-->XX - ??? ????? ???? ??? ?????????<!--</a>--><br>
+			<!--<a href="hsr/20.html">-->XX - ??? ????? ???? ??? ???????<!--</a>--><br>
 			</div>
 		</div></center>
 	</body>
