--- a/apportionment.html
+++ b/apportionment.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<h1>
-			<center><a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><a href="index"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
 			<center><span>Apportionment Simulator</span></center>
 		</h1>
 		<div class=divbutton onclick=uploadCustomTemplate();>Upload Custom Template</div>
