--- a/hsr/p1.html
+++ b/hsr/p1.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>
-			<center><a href="../index.html"><img src="../koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><a href="../index"><img src="../koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
 			<center><span>The Horse Shoe Run Prelude - On the Nature of Speed</span></center>
 		</h1>
 
@@ -44,6 +44,6 @@
 
 		<p>“The Horse Shoe Run.”</p>
 
-		<center><a href="../hsr.html"><div class="divbutton">Main</div></a></center>
+		<center><a href="../hsr"><div class="divbutton">Main</div></a></center>
 	</body>
 </html>
