--- a/textmods.html
+++ b/textmods.html
@@ -38,7 +38,7 @@ function stand() {
 	</script>
 	<body>
 		<h1>
-			<center><a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><a href="index"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
 			<center><span>Text Modifications</span></center>
 		</h1>
 
