--- a/hsr.html
+++ b/hsr.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>
-			<center><a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><a href="index"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
 			<center><span>The Horse Shoe Run - Main Page</span></center>
 		</h1>
 
@@ -17,41 +17,41 @@
 		<center><div style="display: flex; justify-content: center">
 			<div style="padding: 20px">
 			<h3>Section α - Across the Land</h3>
-			<a href="hsr/p1.html" class="hyperlink">Prelude - On the Nature of Speed</a><br>
-			<!--<a href="hsr/1.html">-->I - The Horse Shoe Run<!--</a>--><br>
-			<!--<a href="hsr/2.html">-->II - They're Off!<!--</a>--><br>
-			<!--<a href="hsr/i1.html">-->Interlude - On the Nature of Power<!--</a>--><br>
-			<!--<a href="hsr/3.html">-->III - Crossing the Border<!--</a>--><br>
-			<!--<a href="hsr/4.html">-->IV - Enhanced<!--</a>--><br>
-			<!--<a href="hsr/5.html">-->V - The Last Bend of the Horseshoe<!--</a>--><br>
+			<a href="hsr/p1" class="hyperlink">Prelude - On the Nature of Speed</a><br>
+			<!--<a href="hsr/1">-->I - The Horse Shoe Run<!--</a>--><br>
+			<!--<a href="hsr/2">-->II - They're Off!<!--</a>--><br>
+			<!--<a href="hsr/i1">-->Interlude - On the Nature of Power<!--</a>--><br>
+			<!--<a href="hsr/3">-->III - Crossing the Border<!--</a>--><br>
+			<!--<a href="hsr/4">-->IV - Enhanced<!--</a>--><br>
+			<!--<a href="hsr/5">-->V - The Last Bend of the Horseshoe<!--</a>--><br>
 			</div>
 			<div style="padding: 20px">
 			<h3>Section β - ?????? ??? ???</h3>
-			<!--<a href="hsr/p2.html">-->Prelude - ?? ??? ?????? ?? ?????????<!--</a>--><br>
-			<!--<a href="hsr/6.html">-->VI - ????? ???? ???? ??? ???<!--</a>--><br>
-			<!--<a href="hsr/7.html">-->VII - ?????????<!--</a>--><br>
-			<!--<a href="hsr/i2.html">-->Interlude - ?? ??? ?????? ?? ?????????????<!--</a>--><br>
-			<!--<a href="hsr/8.html">-->VIII - ??? ???? ?? ??? ???????<!--</a>--><br>
-			<!--<a href="hsr/9.html">-->IX - ??? ????? ?? ??? ??????<!--</a>--><br>
-			<!--<a href="hsr/10.html">-->X - ???????? ????<!--</a>--><br>
+			<!--<a href="hsr/p2">-->Prelude - ?? ??? ?????? ?? ?????????<!--</a>--><br>
+			<!--<a href="hsr/6">-->VI - ????? ???? ???? ??? ???<!--</a>--><br>
+			<!--<a href="hsr/7">-->VII - ?????????<!--</a>--><br>
+			<!--<a href="hsr/i2">-->Interlude - ?? ??? ?????? ?? ?????????????<!--</a>--><br>
+			<!--<a href="hsr/8">-->VIII - ??? ???? ?? ??? ???????<!--</a>--><br>
+			<!--<a href="hsr/9">-->IX - ??? ????? ?? ??? ??????<!--</a>--><br>
+			<!--<a href="hsr/10">-->X - ???????? ????<!--</a>--><br>
 			</div>
 			<div style="padding: 20px">
 			<h3>Section γ - ???????? ??? ????????</h3>
-			<!--<a href="hsr/p3.html">-->Prelude - ?? ??? ?????? ?? ?????????<!--</a>--><br>
-			<!--<a href="hsr/11.html">-->XI - ??? ???? ?? ??? ?????<!--</a>--><br>
-			<!--<a href="hsr/12.html">-->XII - ?????? ????????? ????<!--</a>--><br>
-			<!--<a href="hsr/i3.html">-->Interlude - ?? ??? ?????? ?? ??? ????<!--</a>--><br>
-			<!--<a href="hsr/13.html">-->XIII - ? ???? ?? ????? ??? ??????<!--</a>--><br>
-			<!--<a href="hsr/14.html">-->XIV - ???? ???????<!--</a>--><br>
-			<!--<a href="hsr/15.html">-->XV - ? ???? ???????? ?????<!--</a>--><br>
+			<!--<a href="hsr/p3">-->Prelude - ?? ??? ?????? ?? ?????????<!--</a>--><br>
+			<!--<a href="hsr/11">-->XI - ??? ???? ?? ??? ?????<!--</a>--><br>
+			<!--<a href="hsr/12">-->XII - ?????? ????????? ????<!--</a>--><br>
+			<!--<a href="hsr/i3">-->Interlude - ?? ??? ?????? ?? ??? ????<!--</a>--><br>
+			<!--<a href="hsr/13">-->XIII - ? ???? ?? ????? ??? ??????<!--</a>--><br>
+			<!--<a href="hsr/14">-->XIV - ???? ???????<!--</a>--><br>
+			<!--<a href="hsr/15">-->XV - ? ???? ???????? ?????<!--</a>--><br>
 			</div>
 			<div style="padding: 20px">
 			<h3>Section δ - ???? ????????????</h3>
-			<!--<a href="hsr/16.html">-->XVI - ?? ??? ?????? ?? ??????<!--</a>--><br>
-			<!--<a href="hsr/17.html">-->XVII - ?? ??? ?????? ?? ????????<!--</a>--><br>
-			<!--<a href="hsr/18.html">-->XVIII - ?? ??? ?????? ?? ?????<!--</a>--><br>
-			<!--<a href="hsr/19.html">-->XIX - ?? ??? ?????? ?? ?????????<!--</a>--><br>
-			<!--<a href="hsr/20.html">-->XX - ??? ????? ???? ??? ???????<!--</a>--><br>
+			<!--<a href="hsr/16">-->XVI - ?? ??? ?????? ?? ??????<!--</a>--><br>
+			<!--<a href="hsr/17">-->XVII - ?? ??? ?????? ?? ????????<!--</a>--><br>
+			<!--<a href="hsr/18">-->XVIII - ?? ??? ?????? ?? ?????<!--</a>--><br>
+			<!--<a href="hsr/19">-->XIX - ?? ??? ?????? ?? ?????????<!--</a>--><br>
+			<!--<a href="hsr/20">-->XX - ??? ????? ???? ??? ???????<!--</a>--><br>
 			</div>
 		</div></center>
 	</body>
