--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>
-			<center><a href="sekrit.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><a href="sekrit"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
 			<center><span>I am Root</span></center>
 		</h1>
 
@@ -14,12 +14,12 @@
 		To return to this page, click the Koch Snowflake in the upper center.</h2>
 
 		<h3>Interactives</h3>
-		<a href="apportionment.html"><div class="divbutton">Apportionment Simulator</div></a>
-		<a href="randomore.html"><div class="divbutton">Random Ore Generator</div></a>
-		<a href="textmods.html"><div class="divbutton">Text Modification</div></a>
+		<a href="apportionment"><div class="divbutton">Apportionment Simulator</div></a>
+		<a href="randomore"><div class="divbutton">Random Ore Generator</div></a>
+		<a href="textmods"><div class="divbutton">Text Modification</div></a>
 
 		<h3>Non-Interactives</h3>
-		<a href="hsr.html"><div class="divbutton">The Horse Shoe Run</div></a>
+		<a href="hsr"><div class="divbutton">The Horse Shoe Run</div></a>
 
 		<p>
 			Contact: <br>
