--- a/randomore.html
+++ b/randomore.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>
-			<center><a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><a href="index"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
 			<center><span>Random Ore Generator</span></center>
 		</h1>
 
