--- a/sekrit.html
+++ b/sekrit.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>
-			<center><a href="index.html"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><a href="index"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
 			<center><span>Oh, you think you're so clever, don't you?</span></center>
 		</h1>
 
