add chessvariants to index

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 		<h3>Non-Interactives</h3>
 		<a href="hsr"><div class="divbutton">The Horse Shoe Run</div></a>
+		<a href="chessvariants"><div class="divbutton">Chess Variants</div></a>
+
 
 		<p>
 			Contact: <br>
