fixed tooltip css

--- a/chessvariants/baxany.html
+++ b/chessvariants/baxany.html
@@ -8,7 +8,7 @@
 
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 400%;
+  width: 120px;
   background-color: black;
   color: #fff;
   text-align: center;
