added sexagesimal clock

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		<a href="randomore"><div class="divbutton">Random Ore Generator</div></a>
 		<a href="textmods"><div class="divbutton">Text Modification</div></a>
 
+		<h3>Pseudo-Interactives</h3>
+		<a href="sexagesimalclock"><div class="divbutton">Sexagesimal Clock</div></a>
+
 		<h3>Non-Interactives</h3>
 		<a href="hsr"><div class="divbutton">The Horse Shoe Run</div></a>
 		<a href="chessvariants"><div class="divbutton">Chess Variants</div></a>
