added unix time

--- a/sexagesimalclock.html
+++ b/sexagesimalclock.html
@@ -18,6 +18,10 @@
 			<span style="font-size: 50; font-family: argam" id="date"></span>
 			<br>
 			<span style="font-size: 15;" id="date-names"></span>
+			<br>
+			<span style="font-size: 50; font-family: argam" id="unix"></span>
+			<br>
+			<span style="font-size: 15;" id="unix-names"></span>
 		</center>
 
 
