--- a/argam/sexagesimalclock.html
+++ b/argam/sexagesimalclock.html
@@ -1,12 +1,14 @@
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="generic.css">
-		<script src="sexagesimalclock/sexagesimalclock.js"></script>
+		<link rel="stylesheet" type="text/css" href="../generic.css">
+		<script src="https://cdn.jsdelivr.net/npm/bignumber.js/bignumber.min.js"></script>
+		<script src="argam.js"></script>
+		<script src="sexagesimalclock.js"></script>
 		<title>Sexagesimal Clock</title>
 	</head>
 	<body>
 		<h1>
-			<center><a href="index"><img src="koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><a href="index"><img src="../koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
 			<center><span>Sexagesimal Clock</span></center>
 		</h1>
 
