--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<a href="apportionment"><div class="divbutton">Apportionment Simulator</div></a>
 		<a href="randomore"><div class="divbutton">Random Ore Generator</div></a>
 		<a href="textmods"><div class="divbutton">Text Modification</div></a>
-		<a href="argam/argamconvert"><div class="divbutton">Argam Converter</div></a>
+		<a href="argam/converter"><div class="divbutton">Argam Converter</div></a>
 
 		<h3>Pseudo-Interactives</h3>
 		<a href="argam/sexagesimalclock"><div class="divbutton">Sexagesimal Clock</div></a>
