--- a/argam/converter.html
+++ b/argam/converter.html
@@ -17,7 +17,7 @@ function convert() {
 	</head>
 	<body>
 		<h1>
-			<center><a href="index"><img src="../koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><a href="../index"><img src="../koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
 			<center><span>Sexagesimal Argam Converter</span></center>
 		</h1>
 
