--- a/argam/sexclock.html
+++ b/argam/sexclock.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>
-			<center><a href="index"><img src="../koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><a href="../index"><img src="../koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
 			<center><span>What are you, some kinda funnyman?</span></center>
 		</h1>
 		<center>
