--- a/argam/sexagesimalclock.html
+++ b/argam/sexagesimalclock.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<h1>
-			<center><a href="index"><img src="../koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
+			<center><a href="../index"><img src="../koch.png" height=50px width=auto style='vertical-align: middle'></img></a></center>
 			<center><span>Sexagesimal Clock</span></center>
 		</h1>
 
