updated argam stuff

--- a/argam/sexagesimalclock.html
+++ b/argam/sexagesimalclock.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../generic.css">
+		<link rel="stylesheet" type="text/css" href="argam.css">
 		<script src="https://cdn.jsdelivr.net/npm/bignumber.js/bignumber.min.js"></script>
 		<script src="argam.js"></script>
 		<script src="sexagesimalclock.js"></script>
@@ -13,15 +14,15 @@
 		</h1>
 
 		<center>
-			<span style="font-size: 72; font-family: argam" id="clock"></span>
+			<span style="font-size: 72;" class="argam" id="clock"></span>
 			<br>
 			<span style="font-size: 15;" id="clock-names"></span>
 			<br>
-			<span style="font-size: 50; font-family: argam" id="date"></span>
+			<span style="font-size: 50;" class="argam" id="date"></span>
 			<br>
 			<span style="font-size: 15;" id="date-names"></span>
 			<br>
-			<span style="font-size: 50; font-family: argam" id="unix"></span>
+			<span style="font-size: 50;" class="argam" id="unix"></span>
 			<br>
 			<span style="font-size: 15;" id="unix-names"></span>
 		</center>
