--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<a href="randomore"><div class="divbutton">Random Ore Generator</div></a>
 		<a href="textmods"><div class="divbutton">Text Modification</div></a>
 		<a href="argam/converter"><div class="divbutton">Argam Converter</div></a>
+		<a href="argam/calculator"><div class="divbutton">Argam Calculator/div></a>
 
 		<h3>Pseudo-Interactives</h3>
 		<a href="argam/sexagesimalclock"><div class="divbutton">Sexagesimal Clock</div></a>
