--- a/argam/converter.html
+++ b/argam/converter.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../generic.css">
+		<link rel="stylesheet" type="text/css" href="argam.css">
 		<script src="https://cdn.jsdelivr.net/npm/bignumber.js/bignumber.min.js"></script>
 		<script src="argam.js"></script>
 		<script>
@@ -10,6 +11,7 @@ function convert() {
 	let out = document.getElementById('output')
 	let name = document.getElementById('output-name')
 	out.innerText = toArgamString(num, base)
+	out.className = getCSSClass(num, base)
 	name.innerText = toArgamName(num, base)
 }
 		</script>
@@ -26,7 +28,7 @@ function convert() {
 			<br>
 			<input type="number" id="base" value="60" min="2" max="62" onInput="convert()">Base</input>
 			<br>
-			<span style="font-size: 72; font-family: argam" id="output"></span>
+			<span style="font-size: 72;" class="argam" id="output"></span>
 			<br>
 			<span style="font-size: 15;" id="output-name"></span>
 		</center>
