added clear stack

--- a/argam/calculator.html
+++ b/argam/calculator.html
@@ -51,6 +51,9 @@
                         <td class="button" style="font-size: 50;"  onclick="swap()">
                             Swap
                         </td>
+                        <td class="button" style="font-size: 50;"  onclick="stackClear()">
+                            Clear
+                        </td>
                     </tr>
                 </table>
             </div>
