preview of button change

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 		To return to this page, click the Koch Snowflake in the upper center.</h2>
 
 		<h3>Interactives</h3>
-		<a href="apportionment"><div class="divbutton">Apportionment Simulator</div></a>
-		<a href="randomore"><div class="divbutton">Random Ore Generator</div></a>
-		<a href="textmods"><div class="divbutton">Text Modification</div></a>
-		<a href="argam/converter"><div class="divbutton">Argam Converter</div></a>
-		<a href="argam/calculator"><div class="divbutton">Argam Calculator</div></a>
+		<a href="apportionment"><button>Apportionment Simulator</button></a>
+		<a href="randomore"><button>Random Ore Generator</button></a>
+		<a href="textmods"><button>Text Modification</button></a>
+		<a href="argam/converter"><button>Argam Converter</button></a>
+		<a href="argam/calculator"><button>Argam Calculator</button></a>
 
 		<h3>Pseudo-Interactives</h3>
 		<a href="argam/sexagesimalclock"><div class="divbutton">Sexagesimal Clock</div></a>
