--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 		<a href="argam/calculator"><button>Argam Calculator</button></a>
 
 		<h3>Pseudo-Interactives</h3>
-		<a href="argam/sexagesimalclock"><div class="divbutton">Sexagesimal Clock</div></a>
+		<a href="argam/sexagesimalclock"><button>Sexagesimal Clock</button></a>
 
 		<h3>Non-Interactives</h3>
-		<a href="hsr"><div class="divbutton">The Horse Shoe Run</div></a>
-		<a href="chessvariants"><div class="divbutton">Chess Variants</div></a>
+		<a href="hsr"><button>The Horse Shoe Run</button></a>
+		<a href="chessvariants"><button>Chess Variants</button></a>
 
 
 		<p>
