--- a/randomore.html
+++ b/randomore.html
@@ -11,7 +11,7 @@
 			<center><span>Random Ore Generator</span></center>
 		</h1>
 
-		<div class=divbutton onclick=randomizeSeed();>Randomize Seed</div>
+		<button onclick=randomizeSeed();>Randomize Seed</button>
 		Seed: <input type="number" id="seed" onchange=generateOre();></input>
 		<br>
 		Ore Language: <select id='language' onchange=generateOre();>
