--- a/textmods.html
+++ b/textmods.html
@@ -44,7 +44,7 @@ function stand() {
 
 		<textarea id="textbox" rows="8" cols="100"></textarea>
 		<br>
-		
-		<div class="divbutton" onclick=stand()>『Ｓｔａｎｄ』</button>
+
+		<button onclick=stand()>『Ｓｔａｎｄ』</button>
 	</body>
 </html>
