added url sharing

--- a/randomore.html
+++ b/randomore.html
@@ -14,6 +14,8 @@
 		<button onclick=randomizeSeed();>Randomize Seed</button>
 		Seed: <input type="number" id="seed" onchange=generateOre();></input>
 		<br>
+		<button onclick=share();>Copy Link</button>
+		<br>
 		Ore Language: <select id='language' onchange=generateOre();>
 			<option value='english'>English (Simple)</option>
 			<option value='english_complex'>English (Complex)</option>
