fix images being incorrect on initial load

--- a/randomore.html
+++ b/randomore.html
@@ -11,7 +11,7 @@
 			<center><span>Random Ore Generator</span></center>
 		</h1>
 
-		<button onclick=randomizeSeed();>Randomize Seed</button>
+		<button onclick=randomizeSeed();generateOre();>Randomize Seed</button>
 		Seed: <input type="number" id="seed" onchange=generateOre();></input>
 		<br>
 		<button onclick=share();>Copy Link</button>
