added the bazgonball

--- a/sekrit.html
+++ b/sekrit.html
@@ -11,5 +11,7 @@
 		</h1>
 
 		<h2>That's all you get. Now go away.</h2>
+		<center><h5>Is what I would normally say, but you just so happened to find <b>The 3rd Bazgonball!</b></h5></center>
+		<center><img src="3_bazgonball.png" height=200px width=auto style='vertical-align: middle'></img></center>
 	</body>
 </html>
