--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<a href="textmods"><button>Text Modification</button></a>
 		<a href="argam/converter"><button>Argam Converter</button></a>
 		<a href="argam/calculator"><button>Argam Calculator</button></a>
+		<a href="aztecdates"><button>Aztec Date Finder</button></a>
 
 		<h3>Pseudo-Interactives</h3>
 		<a href="argam/sexagesimalclock"><button>Sexagesimal Clock</button></a>
