added puzzlehunt tab and umd21 stats

--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
 		<h3>Pseudo-Interactives</h3>
 		<a href="argam/sexagesimalclock"><button>Sexagesimal Clock</button></a>
 
-		<h3>Non-Interactives</h3>
-		<a href="hsr"><button>The Horse Shoe Run</button></a>
+		<h3>Subcategories</h3>
 		<a href="chessvariants"><button>Chess Variants</button></a>
-
+		<a href="puzzlehunts"><button>Puzzlehunts</button></a>
 
 		<p>
 			Contact: <br>
