Add link to github

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 		<a href="chessvariants"><button>Chess Variants</button></a>
 		<a href="puzzlehunts"><button>Puzzlehunts</button></a>
 
+		<h3>Non-Interactives</h3>
+		<a href="https://github.com/Bazinga9000"><button>To GitHub</button></a>
+
 		<p>
 			Contact: <br>
 			Discord - Bazinga_9000#6963<br>
