--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,10 @@ To return to this page, click the Koch Snowflake in the upper center.</h2>
 <a href="chessvariants"><button>Chess Variants</button></a>
 <a href="puzzlehunts"><button>Puzzlehunts</button></a>
 
-<h3>Non-Interactives</h3>
+<h3>Ramblings</h3>
+<a href="cgt"><button>On Combinatorial Game Theory</button></a>
+
+<h3>Links to Elsewhere</h3>
 <a href="https://github.com/Bazinga9000"><button>To GitHub</button></a>
 
 <h5>This website has been generated with <a class="hyperlink" href="https://jaspervdj.be/hakyll/index.html">Hakyll</a></h5>
