changed argam font and added more attributions for it

--- a/pages/argam/calculator.html
+++ b/pages/argam/calculator.html
@@ -13,16 +13,16 @@ includes: argam/argam, argam/calculator
     <div id="buttons">
         <table id="operation-buttons">
             <tr>
-                <td class="argam button" style="font-size: 50px;" onclick="add()">
+                <td class="button" style="font-size: 50px;" onclick="add()">
                     +
                 </td>
-                <td class="argam button" style="font-size: 50px;" onclick="subtract()">
+                <td class="button" style="font-size: 50px;" onclick="subtract()">
                     -
                 </td>
-                <td class="argam button" style="font-size: 50px;" onclick="multiply()">
+                <td class="button" style="font-size: 50px;" onclick="multiply()">
                     *
                 </td>
-                <td class="argam button" style="font-size: 50px;" onclick="divide()">
+                <td class="button" style="font-size: 50px;" onclick="divide()">
                     ÷
                 </td>
             </tr>
@@ -30,26 +30,26 @@ includes: argam/argam, argam/calculator
         <table id="numerical-buttons"></table>
         <table id="special-numerical">
             <tr>
-                <td class="argam button" style="font-size: 50px;" onclick="inputDigit('.')">
+                <td class="button" style="font-size: 30px;" onclick="inputDigit('.')">
                     .
                 </td>
-                <td class="argam button" style="font-size: 50px;"  onclick="inputDigit('-')">
+                <td class="argam button" style="font-size: 30px;"  onclick="inputDigit('-')">
                     ±
                 </td>
             </tr>
             <tr>
-                <td class="button" style="font-size: 50px;"  onclick="push()">
+                <td class="button" style="font-size: 30px;"  onclick="push()">
                     Push
                 </td>
-                <td class="button" style="font-size: 50px;"  onclick="drop()">
+                <td class="button" style="font-size: 30px;"  onclick="drop()">
                     Drop
                 </td>
             </tr>
             <tr>
-                <td class="button" style="font-size: 50px;"  onclick="swap()">
+                <td class="button" style="font-size: 30px;"  onclick="swap()">
                     Swap
                 </td>
-                <td class="button" style="font-size: 50px;"  onclick="stackClear()">
+                <td class="button" style="font-size: 30px;"  onclick="stackClear()">
                     Clear
                 </td>
             </tr>
@@ -68,5 +68,9 @@ includes: argam/argam, argam/calculator
     </h5>
     <h5>
         Arqam digits created by <a class="hyperlink" href="http://www.vincico.com/arqam/digits/argam-now.html">Michael Thomas De Vlieger</a>
+        <br>
+        Font created by geobica, based on Dozenalism's "Florence" font.
+        <br>
+        If you're any of these people and have comments or objections, please contact me.
     </h5>
 </center>
