--- a/pages/argam/converter.html
+++ b/pages/argam/converter.html
@@ -20,5 +20,7 @@ includes: argam/argam, argam/converter
 <center>
     <h5>
         Arqam digits created by <a class="hyperlink" href="http://www.vincico.com/arqam/digits/argam-now.html">Michael Thomas De Vlieger</a>
+        Font created by geobica, based on Dozenalism's "Florence" font.
+        If you're any of these people and have comments or objections, please contact me.
     </h5>
 </center>
