--- a/pages/argam/sexagesimalclock.html
+++ b/pages/argam/sexagesimalclock.html
@@ -7,15 +7,15 @@ extincludes: https://cdn.jsdelivr.net/npm/bignumber.js/bignumber.min.js
 includes: argam/argam, argam/sexagesimalclock
 ---
 <center>
-    <span style="font-size: 50px;" class="argam" id="clock"></span>
+    <span style="font-size: 30px;" class="argam" id="clock"></span>
     <br>
     <span style="font-size: 15px;" id="clock-names"></span>
     <br>
-    <span style="font-size: 50px;" class="argam" id="date"></span>
+    <span style="font-size: 30px;" class="argam" id="date"></span>
     <br>
     <span style="font-size: 15px;" id="date-names"></span>
     <br>
-    <span style="font-size: 50px;" class="argam" id="unix"></span>
+    <span style="font-size: 30px;" class="argam" id="unix"></span>
     <br>
     <span style="font-size: 15px;" id="unix-names"></span>
 </center>
@@ -24,5 +24,9 @@ includes: argam/argam, argam/sexagesimalclock
 <center>
     <h5>
         Arqam digits created by <a class="hyperlink" href="http://www.vincico.com/arqam/digits/argam-now.html">Michael Thomas De Vlieger</a>
+        <br>
+        Font created by geobica, based on Dozenalism's "Florence" font.
+        <br>
+        If you're any of these people and have comments or objections, please contact me.
     </h5>
 </center>
